--- a/backend/package.json
+++ b/backend/package.json
@@ -7,41 +7,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.3",
+    "dotenv": "^16.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "express": "^4.18.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "react": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.11.0"
   },
   "scripts": {
     "start": "node app.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "lint": "npx eslint .",
     "dev": "nodemon app.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "^8.56.0",
     "nodemon": "^3.0.1"
   }
 }
