--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,4 +14,7 @@ node_modules
 .idea
 .vscode
 
-/.env
+
+git rm env.local --cached
+git rm env.staging --cached
+git commit -m "Stopped tracking env.local, and env.staging"
