--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-import": "^2.29.1",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "validator": "^13.11.0",
