--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,7 +14,4 @@ node_modules
 .idea
 .vscode
 
-
-git rm env.local --cached
-git rm env.staging --cached
-git commit -m "Stopped tracking env.local, and env.staging"
+git rm --cached .env
