--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,3 +15,9 @@ node_modules
 .vscode
 
 git rm --cached .env
+
+git rm env.local --cached
+git rm env.staging --cached
+git commit -m "Stopped tracking env.local, and env.staging"
+
+.env
